--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@ Work</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Kundi 
+									<h6 class="product_name"><a href="">Sr#37 "Kundi 
 Work"</a></h6>
 									<div class="product_price">Rs 10,800</div>
 								</div>
