--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 								<div class="favorite favorite_left"></div>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Sodho Khan Sarwari District Sukkur</a></h6>
+									<h6 class="product_name"><a href="">Sr#4 Sodho Khan Sarwari District Sukkur</a></h6>
 									<div class="product_price">Rs 15,700</div>
 									<p>Sizes: 1 Small</p>
 								</div>
@@ -215,7 +215,7 @@
 								<div class="favorite"></div>
 								<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center"><span>new</span></div>
 								<div class="product_info">
-								<h6 class="product_name"><a href="">Sodho Khan Sarwari District Sukkur</a></h6>
+								<h6 class="product_name"><a href="">Sr#4a Sodho Khan Sarwari District Sukkur</a></h6>
 									<div class="product_price">Rs 15,700</div>
 									<p>Sizes: 1 Small</p>
 								</div>
@@ -232,7 +232,7 @@
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Sodho Khan Sarwari District Sukkur</a></h6>
+									<h6 class="product_name"><a href="">Sr#4b Sodho Khan Sarwari District Sukkur</a></h6>
 									<div class="product_price">Rs 15,700</div>
 									<p>Sizes: 1 Small</p>
 								</div>
@@ -250,7 +250,7 @@
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
 								<div class="favorite favorite_left"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Sodho Khan Sarwari District Sukkur</a></h6>
+									<h6 class="product_name"><a href="">Sr#4c Sodho Khan Sarwari District Sukkur</a></h6>
 									<div class="product_price">Rs 15,700</div>
 									<p>Sizes: 1 Small</p>
 								</div>
@@ -267,7 +267,7 @@
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Sodho Khan Sarwari District Sukkur</a></h6>
+									<h6 class="product_name"><a href="">Sr#4d Sodho Khan Sarwari District Sukkur</a></h6>
 									<div class="product_price">Rs 15,700</div>
 									<p>Sizes: 1 Small</p>
 								</div>
@@ -285,7 +285,7 @@
 								<div class="favorite favorite_left"></div>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="#">Balochi Taka</a></h6>
+									<h6 class="product_name"><a href="#">Sr#5 Balochi Taka</a></h6>
 									<div class="product_price">Rs 16,700</div>
 									<p>Sizes: Small</p>
 								</div>
@@ -302,7 +302,7 @@
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">SHurmch/Kachi Sui Taka</a></h6>
+									<h6 class="product_name"><a href="">Sr#6 SHurmch/Kachi Sui Taka</a></h6>
 									<div class="product_price">Rs 20,700</div>
 									<p>Sizes: 1 Dupatta/ chaadar</p>
 								</div>
@@ -319,7 +319,7 @@
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Kachi Sui
+									<h6 class="product_name"><a href="">Sr#7 "Kachi Sui
 Taka"</a></h6>
 									<div class="product_price">Rs 21,700</div>
 									<p>Sizes: 1 Dupatta/ Chaadar</p>
@@ -338,7 +338,7 @@ Taka"</a></h6>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
 								<div class="favorite favorite_left"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Hurmuch
+									<h6 class="product_name"><a href="">Sr#8 "Hurmuch
 Taka"</a></h6>
 									<div class="product_price">Rs 17,200</div>
 									<p>Sizes: 1 chaadar</p>
@@ -356,7 +356,7 @@ Taka"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Balochi Taka</a></h6>
+									<h6 class="product_name"><a href="">Sr#9 Balochi Taka</a></h6>
 									<div class="product_price">Rs 13,800</div>
 									<p>Sizes: 1 XS, I M, I L</p>
 								</div>
@@ -391,7 +391,7 @@ Taka"</a></h6>
 								<div class="favorite favorite_left"></div>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Hurmuch
+									<h6 class="product_name"><a href="">Sr#10 "Hurmuch
 Taka"</a></h6>
 									<div class="product_price">Rs 15,800</div>
 									<p>	Sizes: 1 S, 1 M, 1L</p>
@@ -410,7 +410,7 @@ Taka"</a></h6>
 								<div class="favorite"></div>
 								<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center"><span>new</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Balochi Taka</a></h6>
+									<h6 class="product_name"><a href="">Sr#11 Balochi Taka</a></h6>
 									<div class="product_price">Rs 12,900</div>
 									<p>	Sizes: 2 S, 1 L</p>
 								</div>
@@ -427,7 +427,7 @@ Taka"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Hurmuch Taka</a></h6>
+									<h6 class="product_name"><a href="">Sr#12 Hurmuch Taka</a></h6>
 									<div class="product_price">Rs 12,500</div>
 									<p>Sizes: 1 XS, 1 S, 1 M, 1L</p>
 								</div>
@@ -445,7 +445,7 @@ Taka"</a></h6>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
 								<div class="favorite favorite_left"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Hurmuch Taka</a></h6>
+									<h6 class="product_name"><a href="">Sr#13 Hurmuch Taka</a></h6>
 									<div class="product_price">Rs 12,500</div>
 									<p>Sizes: 1 S, 1 M, 1 L</p>
 								</div>
@@ -462,7 +462,7 @@ Taka"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Hurmuch Taka</a></h6>
+									<h6 class="product_name"><a href="">Sr#14 Hurmuch Taka</a></h6>
 									<div class="product_price">Rs 18,400</div>
 									<p>Sizes: 1 S, 1 M, 1 L</p>
 								</div>
@@ -480,7 +480,7 @@ Taka"</a></h6>
 								<div class="favorite favorite_left"></div>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="#">Hurmuch Taka</a></h6>
+									<h6 class="product_name"><a href="#">Sr#15 Hurmuch Taka</a></h6>
 									<div class="product_price">Rs 16,000</div>
 									<p>Sizes: 1 XS, 1 S</p>
 								</div>
@@ -497,7 +497,7 @@ Taka"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Mirror Work</a></h6>
+									<h6 class="product_name"><a href="">Sr#16 Mirror Work</a></h6>
 									<div class="product_price">Rs 16,600</div>
 									<
 								</div>
@@ -514,7 +514,7 @@ Taka"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Mirror Work</a></h6>
+									<h6 class="product_name"><a href="">Sr#17 Mirror Work</a></h6>
 									<div class="product_price">Rs 17,000</div>
 									<p>Sizes: 1 S </p>
 								</div>
@@ -532,7 +532,7 @@ Taka"</a></h6>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
 								<div class="favorite favorite_left"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Mirror Work</a></h6>
+									<h6 class="product_name"><a href="">Sr#19 Mirror Work</a></h6>
 									<div class="product_price">Rs 17,000</div>
 									<p>Sizes: 1 M, 1 L</p>
 								</div>
@@ -549,7 +549,7 @@ Taka"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Hurmuch
+									<h6 class="product_name"><a href="">Sr#20 "Hurmuch
 Apliq Work"</a></h6>
 									<div class="product_price">SOLD</div>
 								</div>
@@ -584,7 +584,7 @@ Apliq Work"</a></h6>
 								<div class="favorite favorite_left"></div>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Hurmuch
+									<h6 class="product_name"><a href="">Sr#21 "Hurmuch
 Apliq Work"</a></h6>
 									<div class="product_price">Rs 16,800</div>
 									<p>Sizes: 1 L</p>
@@ -603,7 +603,7 @@ Apliq Work"</a></h6>
 								<div class="favorite"></div>
 								<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center"><span>new</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Hurmuch & Mirror Work</a></h6>
+									<h6 class="product_name"><a href="">Sr#22 Hurmuch & Mirror Work</a></h6>
 									<div class="product_price">Rs 17,200</div>
 								</div>
 							</div>
@@ -619,7 +619,7 @@ Apliq Work"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Hurmuch & Mirror Work</a></h6>
+									<h6 class="product_name"><a href="">Sr#23 Hurmuch & Mirror Work</a></h6>
 									<div class="product_price">Rs 19,800</div>
 								</div>
 							</div>
@@ -636,7 +636,7 @@ Apliq Work"</a></h6>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
 								<div class="favorite favorite_left"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Hurmuch & Mirror Work</a></h6>
+									<h6 class="product_name"><a href="">Sr#24 Hurmuch & Mirror Work</a></h6>
 									<div class="product_price">Rs 20,300</div>
 								</div>
 							</div>
@@ -652,7 +652,7 @@ Apliq Work"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Hurmuch & Mirror Work</a></h6>
+									<h6 class="product_name"><a href="">Sr#25 Hurmuch & Mirror Work</a></h6>
 									<div class="product_price">Rs 16,300</div>
 								</div>
 							</div>
@@ -669,7 +669,7 @@ Apliq Work"</a></h6>
 								<div class="favorite favorite_left"></div>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="#">"Hurmuch/
+									<h6 class="product_name"><a href="#">Sr#26 "Hurmuch/
 Apliq  & Mirror Work"</a></h6>
 									<div class="product_price">Rs 14,300</div>
 									<p>Sizes: 2 M</p>
@@ -687,7 +687,7 @@ Apliq  & Mirror Work"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Balochi Taka</a></h6>
+									<h6 class="product_name"><a href="">Sr#27 Balochi Taka</a></h6>
 									<div class="product_price">Rs 13,200</div>
 									<p>Sizes: 2 M</p>
 								</div>
@@ -704,7 +704,7 @@ Apliq  & Mirror Work"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">BMirror Work</a></h6>
+									<h6 class="product_name"><a href="">Sr#28 Mirror Work</a></h6>
 									<div class="product_price"> SOLD</div>
 								</div>
 							</div>
@@ -721,7 +721,7 @@ Apliq  & Mirror Work"</a></h6>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
 								<div class="favorite favorite_left"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Hurmuch
+									<h6 class="product_name"><a href="">Sr#29 "Hurmuch
 Mirror Work"</a></h6>
 									<div class="product_price">Rs 14,200</div>
 									<p>Sizes: 4 Chaadars</p>
@@ -739,7 +739,7 @@ Mirror Work"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Hurmuch
+									<h6 class="product_name"><a href="">Sr#30 "Hurmuch
 Mirror Work"</a></h6>
 									<div class="product_price">Rs 13,200</div>
 									<p>Sizes: 4 Chaadars</p>
@@ -777,7 +777,7 @@ Mirror Work"</a></h6>
 								<div class="favorite favorite_left"></div>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Hurmuch
+									<h6 class="product_name"><a href="">Sr#31 "Hurmuch
 Mirror Work"</a></h6>
 									<div class="product_price">Rs 13,200</div>
 									<p>Sizes: 4 Chaadars</p>
@@ -796,7 +796,7 @@ Mirror Work"</a></h6>
 								<div class="favorite"></div>
 								<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center"><span>new</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Kachi Sui Taka</a></h6>
+									<h6 class="product_name"><a href="">Sr#32 Kachi Sui Taka</a></h6>
 									<div class="product_price">Rs 17,500</div>
 									<p>Sizes: 1 XS, 1 S, 1 M, 1 L</p>
 								</div>
@@ -813,7 +813,7 @@ Mirror Work"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Kachi Sui Taka</a></h6>
+									<h6 class="product_name"><a href="">Sr#33 Kachi Sui Taka</a></h6>
 									<div class="product_price">RS 25,500</div>
 									<p>Sizes: 1 s, 1 M, 1 L</p>
 								</div>
@@ -831,7 +831,7 @@ Mirror Work"</a></h6>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
 								<div class="favorite favorite_left"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Kachi Sui Taka</a></h6>
+									<h6 class="product_name"><a href="">Sr#34 Kachi Sui Taka</a></h6>
 									<div class="product_price">Rs 12,500</div>
 								</div>
 							</div>
@@ -847,7 +847,7 @@ Mirror Work"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Kundi 
+									<h6 class="product_name"><a href="">Sr#35"Kundi 
 Work"</a></h6>
 									<div class="product_price">Rs 24,700</div>
 									<p>SIzes:1 S, 1 M, 1 L</p>
@@ -866,7 +866,7 @@ Work"</a></h6>
 								<div class="favorite favorite_left"></div>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="#">Kundi 
+									<h6 class="product_name"><a href="#">Sr#36 Kundi 
 Work</a></h6>
 									<div class="product_price">Rs 15,900</div>
 									<p>Sizes: 3 M, 2 L</p>
@@ -901,7 +901,7 @@ Work"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Kundi 
+									<h6 class="product_name"><a href="">Sr#37 Kundi 
 Work</a></h6>
 									<div class="product_price">Rs 13,700</div>
 									<p>Sizes: 1 S, 1 M, 1 L, 1 XL</p>
@@ -920,7 +920,7 @@ Work</a></h6>
 								<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
 								<div class="favorite favorite_left"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Kundi 
+									<h6 class="product_name"><a href="">Sr#38 Kundi 
 Work</a></h6>
 									<div class="product_price">Rs 18,000</div>
 									<p>Sizes: 1 S, 1 L</p>
@@ -938,7 +938,7 @@ Work</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">Appliq & Kundi Work</a></h6>
+									<h6 class="product_name"><a href="">Sr# Sr#39 Appliq & Kundi Work</a></h6>
 									<div class="product_price">Rs 20,300</div>
 									<p>Sizes: 1 XL</p>
 								</div>
@@ -952,7 +952,7 @@ Work</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">"Kundi 
+									<h6 class="product_name"><a href="">Sr#40 "Kundi 
 Work"</a></h6>
 									<div class="product_price">Rs 15,500</div>
 									<p>Sizes: 1 S</p>
@@ -967,7 +967,7 @@ Work"</a></h6>
 								</div>
 								<div class="favorite"></div>
 								<div class="product_info">
-									<h6 class="product_name"><a href="">bharti taanka</a></h6>
+									<h6 class="product_name"><a href="">Sr#41 bharti taanka</a></h6>
 									<div class="product_price">Rs 17,200</div>
 								</div>
 							</div>
