fixed shop button

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<div class="main_slider_content">
 						<h6>New Collection 2018</h6>
 						<h3>Making Life Matter — local craft and income generation</h3>
-						<div class="red_button shop_now_button"><a href="#">shop now</a></div>
+						<div class="red_button shop_now_button"><a href="#jump">shop now</a></div>
 					</div>
 				</div>
 			</div>
@@ -169,7 +169,7 @@
 			<div class="row">
 				<div class="col text-center">
 					<div class="section_title new_arrivals_title">
-						<h2>New Arrivals</h2>
+						<h2 id="jump">New Arrivals</h2>
 					</div>
 				</div>
 			</div>
